# PrintAssist

./: .gitignore  README.md  package-lock.json  package.json  rsbuild.config.ts  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/: design-system.md
prototypes/: design-spec.md  index.html
prototypes/direction-a/: index.html
prototypes/direction-b/: index.html
prototypes/direction-c/: index.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  contracts.rs  ingress.rs  lib.rs  main.rs
src-tauri/src/documents/: image_print.rs  mod.rs  office.rs  office_com.rs  office_print.rs  page_range.rs  pdf_pages.rs  pdf_print.rs  pdf_raster_d2d.rs  print_shell.rs
src-tauri/src/printers/: mod.rs  win32.rs
src-tauri/src/printing/: job_runner.rs  mod.rs
src-tauri/windows/: installer-hooks.nsh
src/api/: nativeBridge.ts
src/components/: AppLogo.tsx
src/domain/: pageRange.test.ts  pageRange.ts  printSettings.ts  proxySettings.ts  queueTypes.ts
src/features/queue/: PrintQueue.tsx  queueReducer.test.ts  queueReducer.ts
src/features/results/: PrintSummary.tsx
src/features/settings/: FileSettingsDrawer.tsx  GlobalSettingsPanel.tsx  ProxySettingsPanel.tsx
src/features/update/: UpdateModal.tsx
src/shared/contracts/: printJob.ts  printer.ts
